sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:11: error: illegal start of simple pattern
    var val: Int=getValeur(pos)
        ^AlgInsertionSort:12: error: '=' expected but ';' found.
    for (j<- pos to i ){
^AlgInsertionSort:14: error: illegal start of simple pattern
      val=getValeur(j+1)
         ^AlgInsertionSort:15: error: '=' expected but '}' found.
    }
    ^