sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var n: Int=getNombreValeurs()
  for (i<- n-1 to 1 by -1){
    var v: Int=getValeur(i)
    var pos: Int=0
    for (j<- 0 to i){
      if (!plusPetitQue(j,v)){
        pos+=1
      }}
    var val: Int=getValeur(pos)
    for (j<- pos to i ){
      setValeur(v)
      val=getValeur(j+1)
    }
    
    
  }
}